v 1 fix all file

--- a/terms.html
+++ b/terms.html
@@ -1,10 +1,56 @@
 <!DOCTYPE html>
-<html>
-<head><title>Terms of Service</title></head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Terms of Service</title>
+
+  <!-- TikTok Domain Verification -->
+  <!-- ใส่ meta จาก TikTok ตรง content -->
+  <meta name="tiktok-site-verification" content="PUT_YOUR_CODE_HERE" />
+</head>
 <body>
+
 <h1>Terms of Service</h1>
-<p>This application is for personal and educational use only.</p>
-<p>The app uploads videos to TikTok as drafts only.</p>
-<p>No automated posting without user action.</p>
+
+<p>
+By using the Local Video Uploader application ("the App"), you agree to the following
+terms and conditions.
+</p>
+
+<h2>Usage Scope</h2>
+<p>
+This App is intended for personal, private, and educational use only.
+It is not provided as a commercial service.
+</p>
+
+<h2>Content Upload</h2>
+<p>
+The App allows users to upload videos to TikTok and YouTube using official APIs.
+All uploads require explicit user action.
+</p>
+
+<h2>No Automated Posting</h2>
+<p>
+The App does not automatically publish videos without user initiation.
+Scheduled uploads are controlled locally by the user.
+</p>
+
+<h2>Draft Upload</h2>
+<p>
+Videos uploaded to TikTok are uploaded as drafts unless the user explicitly chooses
+to publish them.
+</p>
+
+<h2>Limitation of Liability</h2>
+<p>
+The developer is not responsible for any account restrictions, content removal,
+or API limitations imposed by TikTok or YouTube.
+</p>
+
+<h2>Changes to Terms</h2>
+<p>
+These Terms may be updated at any time without prior notice.
+</p>
+
 </body>
 </html>
