--- a/privacy.html
+++ b/privacy.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
-<html>
-<head><title>Privacy Policy</title></head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Privacy Policy</title>
+
+  <!-- TikTok Domain Verification -->
+  <!-- ใส่ meta จาก TikTok ตรง content -->
+  <meta name="tiktok-site-verification" content="PUT_YOUR_CODE_HERE" />
+</head>
 <body>
+
 <h1>Privacy Policy</h1>
-<p>This application does not store user passwords.</p>
-<p>OAuth tokens are used only for video upload purposes.</p>
-<p>No personal data is shared with third parties.</p>
+
+<p>
+This Privacy Policy describes how the Local Video Uploader application ("the App")
+handles user information.
+</p>
+
+<h2>Information Collection</h2>
+<p>
+The App does not collect or store user passwords or sensitive personal information.
+</p>
+
+<h2>OAuth Authentication</h2>
+<p>
+OAuth access tokens provided by TikTok or YouTube are used solely for the purpose
+of uploading videos on behalf of the user. Tokens are stored securely and are never
+shared with third parties.
+</p>
+
+<h2>Data Usage</h2>
+<p>
+The App is used for personal and educational purposes only. Uploaded videos are
+processed locally and are not analyzed or shared externally.
+</p>
+
+<h2>Third-Party Services</h2>
+<p>
+The App interacts only with official APIs provided by TikTok and YouTube.
+No user data is sold or transferred to external services.
+</p>
+
+<h2>Contact</h2>
+<p>
+If you have any questions about this Privacy Policy, please contact the developer
+through the GitHub repository.
+</p>
+
 </body>
 </html>
